<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".SettingsActivity"
    tools:visibility="visible">

<!--TODO RingTone Customizability-->

    <!--TODO Change Color Programmatically-->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#959393"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backtomain"
        android:onClick="back"
        android:padding="14dp"
        android:src="@drawable/back"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_back_white10_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/themeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="@string/light_mode"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_back_white10_20"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--TODO Change Color Programmatically-->
        <TextView
            android:id="@+id/inputWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_keyword_is"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:fontFamily="@font/lato"/>

        <!--TODO Change Color Programmatically-->
        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/set_your_word_here"
            android:fontFamily="@font/lato"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            android:textSize="15sp" />

        <!--TODO Change Color Programmatically-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="updateKeyword"
            android:text="@string/confirm"
            android:background="@drawable/button_border"
            android:fontFamily="@font/lato"
            android:textColor="#5BDC30"
            android:textColorLink="#5BDC30"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_back_white10_20"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dismissSwitch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571">

            <!--TODO Change Color Programmatically-->
            <TextView
                android:id="@+id/auto_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/auto_dismiss"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!--TODO Change Color Programmatically-->
            <TextView
                android:id="@+id/auto_dismiss_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lato"
                android:text="@string/automatically_dismisses_notifications_that_do_not_have_your_keyword"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dismissSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_back_white10_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <!--TODO Change Color Programmatically-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="Ringtone"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!--TODO Change Color Programmatically-->
        <ImageButton
            android:id="@+id/upload_mp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#959393"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/backtomain"
            android:padding="14dp"
            android:src="@drawable/upload"
            app:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!--TODO Change Color Programmatically-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/testNoti"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:fontFamily="@font/lato"
        android:onClick="postTestNotification"
        android:text="@string/test_notification"
        android:textColor="#5BDC30"
        android:textColorLink="#5BDC30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

</androidx.constraintlayout.widget.ConstraintLayout>